# mcp-browser-use

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml
docs/: ClaudeBrowserIntegration.md
src/mcp_server_browser_use/: __init__.py  __main__.py  cli.py  config.py  custom_browser.py  run_agents.py  server.py
src/mcp_server_browser_use/_internal/agent/browser_use/: browser_use_agent.py
src/mcp_server_browser_use/_internal/agent/deep_research/: deep_research_agent.py
src/mcp_server_browser_use/_internal/browser/: custom_browser.py
src/mcp_server_browser_use/_internal/controller/: custom_controller.py
src/mcp_server_browser_use/_internal/utils/: llm_provider.py  utils.py
src/mcp_server_browser_use/agent/: custom_agent.py  custom_massage_manager.py  custom_message_manager.py  custom_prompts.py  custom_views.py
src/mcp_server_browser_use/browser/: custom_browser.py  custom_context.py
src/mcp_server_browser_use/controller/: custom_controller.py
src/mcp_server_browser_use/utils/: agent_state.py  deep_research.py  llm.py  utils.py
