[project]
name = "mcp_server_browser_use"
version = "0.1.2"
description = "MCP server for browser-use"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Igor Tarasenko" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "langchain>=0.3.14",
    "langchain-openai>=0.2.14",
    "pydantic>=2.10.5",
    "fastapi>=0.115.6",
    "uvicorn>=0.22.0",
    "openai>=1.59.5",
    "python-dotenv>=1.0.1",
    "pyperclip>=1.9.0",
    "langchain-ollama>=0.2.2",
    "instructor>=1.7.2",
    "json-repair>=0.35.0",
    "langchain-mistralai>=0.2.6",
    "fastmcp>=0.4.1",
    "browser-use==0.1.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_browser_use"]

[project.scripts]
mcp-server-browser-use = "mcp_server_browser_use.server:main"
