[project]
name = "mcp_server_browser_use"
version = "0.1.5"
description = "MCP server for browser-use"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Igor Tarasenko" }]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
]

dependencies = [
  "langchain>=0.3.14",
  "langchain-openai>=0.2.14",
  "pydantic>=2.10.5",
  "openai>=1.59.5",
  "pyperclip>=1.9.0",
  "langchain-ollama>=0.2.2",
  "instructor>=1.7.2",
  "json-repair>=0.35.0",
  "langchain-mistralai>=0.2.6",
  "mcp>=1.6.0",
  "browser-use==0.1.40",
  "MainContentExtractor==0.0.4",
  "langchain-google-genai>=2.0.8",
  "langchain-anthropic>=0.2.1",
  "langchain-mistralai>=0.2.4",
  "pillow>=11.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_browser_use"]

[project.scripts]
mcp-server-browser-use = "mcp_server_browser_use.server:main"

[tool.pyright]
include = ["src/mcp_server_browser_use"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 150
target-version = "py311"

[tool.uv]
dev-dependencies = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]
